Details
-
Type:
Bug
-
Status: Closed
-
Priority:
P2: Important
-
Resolution: Done
-
Affects Version/s: Qt Creator 3.6.0, Qt Creator 4.0.0-beta1
-
Fix Version/s: Qt Creator 4.0.0-beta1
-
Component/s: Project & Build Management
-
Labels:None
-
Environment:Windows 10 , MSVC2015 64bit
Description
Testing Creator/master at c9f595bfc7aa27f30e66356fced1cf8eb2486ac4, when opening qtcreator.pro:
Info: creating cache file \.qmake.cache QWinEventNotifier: Cannot have more than 62 enabled at one time QWinEventNotifier: Cannot have more than 62 enabled at one time QWinEventNotifier: Cannot have more than 62 enabled at one time QWinEventNotifier: Cannot have more than 62 enabled at one time QWinEventNotifier: Cannot have more than 62 enabled at one time QWinEventNotifier: Cannot have more than 62 enabled at one time QWinEventNotifier: Cannot have more than 62 enabled at one time QWinEventNotifier: Cannot have more than 62 enabled at one time QWinEventNotifier: Cannot have more than 62 enabled at one time QWinEventNotifier: Cannot have more than 62 enabled at one time QWinEventNotifier: Cannot have more than 62 enabled at one time QWinEventNotifier: Cannot have more than 62 enabled at one time QWinEventNotifier: Cannot have more than 62 enabled at one time QWinEventNotifier: Cannot have more than 62 enabled at one time QWinEventNotifier: Cannot have more than 62 enabled at one time QWinEventNotifier: Cannot have more than 62 enabled at one time QWinEventNotifier: Cannot have more than 62 enabled at one time QWinEventNotifier: Cannot have more than 62 enabled at one time QWinEventNotifier: Cannot have more than 62 enabled at one time QWinEventNotifier: Cannot have more than 62 enabled at one time QWinEventNotifier: Cannot have more than 62 enabled at one time QWinEventNotifier: Cannot have more than 62 enabled at one time QWinEventNotifier: Cannot have more than 62 enabled at one time QWinEventNotifier: Cannot have more than 62 enabled at one time QWinEventNotifier: Cannot have more than 62 enabled at one time QWinEventNotifier: Cannot have more than 62 enabled at one time QWinEventNotifier: Cannot have more than 62 enabled at one time QWinEventNotifier: Cannot have more than 62 enabled at one time QWinEventNotifier: Cannot have more than 62 enabled at one time QWinEventNotifier: Cannot have more than 62 enabled at one time QWinEventNotifier: Cannot have more than 62 enabled at one time Info: creating cache file D:\dev\5-vs15-57r\qt-creator40\.qmake.cache QProcess: Destroyed while process ("D:\\dev\\4-vs15-dbg\\qt\\bin\\uic.exe") is still running. QProcess: Destroyed while process ("D:\\dev\\4-vs15-dbg\\qt\\bin\\uic.exe") is still running. QProcess: Destroyed while process ("D:\\dev\\4-vs15-dbg\\qt\\bin\\uic.exe") is still running. QProcess: Destroyed while process ("D:\\dev\\4-vs15-dbg\\qt\\bin\\uic.exe") is still running. QProcess: Destroyed while process ("D:\\dev\\4-vs15-dbg\\qt\\bin\\uic.exe") is still running. QProcess: Destroyed while process ("D:\\dev\\4-vs15-dbg\\qt\\bin\\uic.exe") is still running. QProcess: Destroyed while process ("D:\\dev\\4-vs15-dbg\\qt\\bin\\uic.exe") is still running. QProcess: Destroyed while process ("D:\\dev\\4-vs15-dbg\\qt\\bin\\uic.exe") is still running. QProcess: Destroyed while process ("D:\\dev\\4-vs15-dbg\\qt\\bin\\uic.exe") is still running. QProcess: Destroyed while process ("D:\\dev\\4-vs15-dbg\\qt\\bin\\uic.exe") is still running. QProcess: Destroyed while process ("D:\\dev\\4-vs15-dbg\\qt\\bin\\uic.exe") is still running. QProcess: Destroyed while process ("D:\\dev\\4-vs15-dbg\\qt\\bin\\uic.exe") is still running. QProcess: Destroyed while process ("D:\\dev\\4-vs15-dbg\\qt\\bin\\uic.exe") is still running. QProcess: Destroyed while process ("D:\\dev\\4-vs15-dbg\\qt\\bin\\uic.exe") is still running. QProcess: Destroyed while process ("D:\\dev\\4-vs15-dbg\\qt\\bin\\uic.exe") is still running. QProcess: Destroyed while process ("D:\\dev\\4-vs15-dbg\\qt\\bin\\uic.exe") is still running. QProcess: Destroyed while process ("D:\\dev\\4-vs15-dbg\\qt\\bin\\uic.exe") is still running. QProcess: Destroyed while process ("D:\\dev\\4-vs15-dbg\\qt\\bin\\uic.exe") is still running. QProcess: Destroyed while process ("D:\\dev\\4-vs15-dbg\\qt\\bin\\uic.exe") is still running. QProcess: Destroyed while process ("D:\\dev\\4-vs15-dbg\\qt\\bin\\uic.exe") is still running. QProcess: Destroyed while process ("D:\\dev\\4-vs15-dbg\\qt\\bin\\uic.exe") is still running. QProcess: Destroyed while process ("D:\\dev\\4-vs15-dbg\\qt\\bin\\uic.exe") is still running. QProcess: Destroyed while process ("D:\\dev\\4-vs15-dbg\\qt\\bin\\uic.exe") is still running. QProcess: Destroyed while process ("D:\\dev\\4-vs15-dbg\\qt\\bin\\uic.exe") is still running. QProcess: Destroyed while process ("D:\\dev\\4-vs15-dbg\\qt\\bin\\uic.exe") is still running. QProcess: Destroyed while process ("D:\\dev\\4-vs15-dbg\\qt\\bin\\uic.exe") is still running. QProcess: Destroyed while process ("D:\\dev\\4-vs15-dbg\\qt\\bin\\uic.exe") is still running. QProcess: Destroyed while process ("D:\\dev\\4-vs15-dbg\\qt\\bin\\uic.exe") is still running. QProcess: Destroyed while process ("D:\\dev\\4-vs15-dbg\\qt\\bin\\uic.exe") is still running. QProcess: Destroyed while process ("D:\\dev\\4-vs15-dbg\\qt\\bin\\uic.exe") is still running. QProcess: Destroyed while process ("D:\\dev\\4-vs15-dbg\\qt\\bin\\uic.exe") is still running. QWinEventNotifier: Cannot have more than 62 enabled at one time QWinEventNotifier: Cannot have more than 62 enabled at one time QWinEventNotifier: Cannot have more than 62 enabled at one time QWinEventNotifier: Cannot have more than 62 enabled at one time QWinEventNotifier: Cannot have more than 62 enabled at one time QWinEventNotifier: Cannot have more than 62 enabled at one time Core::Internal::MainWindow::MainWindow No tool chain set from kit "Qt 5.5.1 (qt-55)". No tool chain set from kit "Qt 5.5.1 (winrt_x64)". No tool chain set from kit "Qt562". No tool chain set from kit "Qt56MinGW". No tool chain set from kit "Qt 5.6.0 (qt-56-rt)". No tool chain set from kit "Qt 5.5.1 (qt-55)". No tool chain set from kit "Qt 5.7.0 (qt-clang-dev)". No tool chain set from kit "Qt 5.5.1 (qt-55)". No tool chain set from kit "Qt 5.5.1 (winrt_x64)". No tool chain set from kit "Qt562". No tool chain set from kit "Qt56MinGW". No tool chain set from kit "Qt 5.6.0 (qt-56-rt)". No tool chain set from kit "Qt 5.5.1 (qt-55)". No tool chain set from kit "Qt 5.7.0 (qt-clang-dev)". Cannot update Qt version information: D:/dev/qt-vs15-dev/qt-dev/qtbase/bin/qmake.exe cannot be run. Cannot update Qt version information: D:/dev/5-vs15-56-32/qt-56-32/qtbase/bin/qmake.exe cannot be run. Core::Internal::MainWindow::openDroppedFiles ("D:/dev/5-vs15-57r/qt-creator40/qtcreator.pro") Core::Internal::MainWindow::openFiles "D:/dev/5-vs15-57r/qt-creator40/qtcreator.pro" Core::Internal::MainWindow::openFiles "D:/dev/5-vs15-57r/qt-creator40/qtcreator.pro" Core::IDocumentFactory(0x25cab634980) Info: creating cache file \.qmake.cache QWinEventNotifier: Cannot have more than 62 enabled at one time QWinEventNotifier: Cannot have more than 62 enabled at one time QWinEventNotifier: Cannot have more than 62 enabled at one time QWinEventNotifier: Cannot have more than 62 enabled at one time QWinEventNotifier: Cannot have more than 62 enabled at one time QWinEventNotifier: Cannot have more than 62 enabled at one time QWinEventNotifier: Cannot have more than 62 enabled at one time QWinEventNotifier: Cannot have more than 62 enabled at one time QWinEventNotifier: Cannot have more than 62 enabled at one time QWinEventNotifier: Cannot have more than 62 enabled at one time QWinEventNotifier: Cannot have more than 62 enabled at one time QWinEventNotifier: Cannot have more than 62 enabled at one time QWinEventNotifier: Cannot have more than 62 enabled at one time QWinEventNotifier: Cannot have more than 62 enabled at one time QWinEventNotifier: Cannot have more than 62 enabled at one time QWinEventNotifier: Cannot have more than 62 enabled at one time QWinEventNotifier: Cannot have more than 62 enabled at one time QWinEventNotifier: Cannot have more than 62 enabled at one time QWinEventNotifier: Cannot have more than 62 enabled at one time QWinEventNotifier: Cannot have more than 62 enabled at one time QWinEventNotifier: Cannot have more than 62 enabled at one time QWinEventNotifier: Cannot have more than 62 enabled at one time QWinEventNotifier: Cannot have more than 62 enabled at one time QWinEventNotifier: Cannot have more than 62 enabled at one time QWinEventNotifier: Cannot have more than 62 enabled at one time QWinEventNotifier: Cannot have more than 62 enabled at one time QWinEventNotifier: Cannot have more than 62 enabled at one time QWinEventNotifier: Cannot have more than 62 enabled at one time QWinEventNotifier: Cannot have more than 62 enabled at one time QWinEventNotifier: Cannot have more than 62 enabled at one time QWinEventNotifier: Cannot have more than 62 enabled at one time Info: creating cache file D:\dev\5-vs15-57r\qt-creator40\.qmake.cache QProcess: Destroyed while process ("D:\\dev\\4-vs15-dbg\\qt\\bin\\uic.exe") is still running. QProcess: Destroyed while process ("D:\\dev\\4-vs15-dbg\\qt\\bin\\uic.exe") is still running. QProcess: Destroyed while process ("D:\\dev\\4-vs15-dbg\\qt\\bin\\uic.exe") is still running. QProcess: Destroyed while process ("D:\\dev\\4-vs15-dbg\\qt\\bin\\uic.exe") is still running. QProcess: Destroyed while process ("D:\\dev\\4-vs15-dbg\\qt\\bin\\uic.exe") is still running. QProcess: Destroyed while process ("D:\\dev\\4-vs15-dbg\\qt\\bin\\uic.exe") is still running. QProcess: Destroyed while process ("D:\\dev\\4-vs15-dbg\\qt\\bin\\uic.exe") is still running. QProcess: Destroyed while process ("D:\\dev\\4-vs15-dbg\\qt\\bin\\uic.exe") is still running. QProcess: Destroyed while process ("D:\\dev\\4-vs15-dbg\\qt\\bin\\uic.exe") is still running. QProcess: Destroyed while process ("D:\\dev\\4-vs15-dbg\\qt\\bin\\uic.exe") is still running. QProcess: Destroyed while process ("D:\\dev\\4-vs15-dbg\\qt\\bin\\uic.exe") is still running. QProcess: Destroyed while process ("D:\\dev\\4-vs15-dbg\\qt\\bin\\uic.exe") is still running. QProcess: Destroyed while process ("D:\\dev\\4-vs15-dbg\\qt\\bin\\uic.exe") is still running. QProcess: Destroyed while process ("D:\\dev\\4-vs15-dbg\\qt\\bin\\uic.exe") is still running. QProcess: Destroyed while process ("D:\\dev\\4-vs15-dbg\\qt\\bin\\uic.exe") is still running. QProcess: Destroyed while process ("D:\\dev\\4-vs15-dbg\\qt\\bin\\uic.exe") is still running. QProcess: Destroyed while process ("D:\\dev\\4-vs15-dbg\\qt\\bin\\uic.exe") is still running. QProcess: Destroyed while process ("D:\\dev\\4-vs15-dbg\\qt\\bin\\uic.exe") is still running. QProcess: Destroyed while process ("D:\\dev\\4-vs15-dbg\\qt\\bin\\uic.exe") is still running. QProcess: Destroyed while process ("D:\\dev\\4-vs15-dbg\\qt\\bin\\uic.exe") is still running. QProcess: Destroyed while process ("D:\\dev\\4-vs15-dbg\\qt\\bin\\uic.exe") is still running. QProcess: Destroyed while process ("D:\\dev\\4-vs15-dbg\\qt\\bin\\uic.exe") is still running. QProcess: Destroyed while process ("D:\\dev\\4-vs15-dbg\\qt\\bin\\uic.exe") is still running. QProcess: Destroyed while process ("D:\\dev\\4-vs15-dbg\\qt\\bin\\uic.exe") is still running. QProcess: Destroyed while process ("D:\\dev\\4-vs15-dbg\\qt\\bin\\uic.exe") is still running. QProcess: Destroyed while process ("D:\\dev\\4-vs15-dbg\\qt\\bin\\uic.exe") is still running. QProcess: Destroyed while process ("D:\\dev\\4-vs15-dbg\\qt\\bin\\uic.exe") is still running. QProcess: Destroyed while process ("D:\\dev\\4-vs15-dbg\\qt\\bin\\uic.exe") is still running. QProcess: Destroyed while process ("D:\\dev\\4-vs15-dbg\\qt\\bin\\uic.exe") is still running. QProcess: Destroyed while process ("D:\\dev\\4-vs15-dbg\\qt\\bin\\uic.exe") is still running. QProcess: Destroyed while process ("D:\\dev\\4-vs15-dbg\\qt\\bin\\uic.exe") is still running. QWinEventNotifier: Cannot have more than 62 enabled at one time QWinEventNotifier: Cannot have more than 62 enabled at one time QWinEventNotifier: Cannot have more than 62 enabled at one time QWinEventNotifier: Cannot have more than 62 enabled at one time QWinEventNotifier: Cannot have more than 62 enabled at one time QWinEventNotifier: Cannot have more than 62 enabled at one time QObject::connect: Connecting from COMPAT signal (QProcess::error(QProcess::ProcessError)) QProcess: Destroyed while process ("D:\\dev\\5-vs15-57r\\qt-57r\\qtbase\\bin\\uic.exe") is still running. QProcess: Destroyed while process ("D:\\dev\\5-vs15-57r\\qt-57r\\qtbase\\bin\\uic.exe") is still running. QProcess: Destroyed while process ("D:\\dev\\5-vs15-57r\\qt-57r\\qtbase\\bin\\uic.exe") is still running. QProcess: Destroyed while process ("D:\\dev\\5-vs15-57r\\qt-57r\\qtbase\\bin\\uic.exe") is still running. QProcess: Destroyed while process ("D:\\dev\\5-vs15-57r\\qt-57r\\qtbase\\bin\\uic.exe") is still running. QProcess: Destroyed while process ("D:\\dev\\5-vs15-57r\\qt-57r\\qtbase\\bin\\uic.exe") is still running.
Attachments
Issue Links
- relates to
-
QTCREATORBUG-15690 Qt Creator crashes soon after opening help
-
- Closed
-
-
QTBUG-8819 QWinEventNotifier cannot handle more than 62 handles
-
- Closed
-